--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "husky": "6.0.0",
     "jest": "26.6.3",
     "nodemon": "2.0.7",
+    "prettier": "^2.6.2",
     "sucrase": "3.17.1",
     "ts-jest": "26.5.4",
     "typescript": "4.2.4"
